2004-09-29  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue, et al.:  Change the real uid and gid
	to match their effective counterparts.
	Thanks to James Grinter.

	* lib/Mj/Config.pm:  (parse_attachment_filters)  Support
	the "keep" action, which allows multipart types to pass
	without having their subparts filtered.

	* lib/Mj/Resend.pm:  (_post)  Use the original message body
	instead of the decoded and re-encoded body if no alterations
	were made to the body.
	Thanks to Steve Kennedy.

2004-09-18  Michael Yount <csf@moscow.com>

	* Makefile.PL, postinstall:  Qmail requires mj_enqueue
	and mj_email to be setuid in case a domain is managed
	by some user other than the majordomo user.
        Thanks to Peter Ajamian.

2004-09-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (list_access_check)  Remove
	definition test, which was preventing reply messages
	from being sent.

	* lib/Mj/Format.pm:  (who)  Support a "who_none" format
	file, which indicates that no addresses were found.
	Thanks to SRE.

	* lib/Mj/Resend.pm:  (post)  Do not send an ack if the
	reply is NONE.  Thanks to SRE.

2004-09-11  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Add support for directory and file
	creation and deletion.

	* lib/Majordomo.pm:  (_put) Untaint the file name.

	* lib/Mj/Format.pm:  (put)  Support the put_delete
	and put_dir format files.

2004-09-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (put)  Support PARENT and PATH
	substitutions.

2004-09-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (archive_start)  Initialize to avoid
	warnings.

	* lib/Mj/Access.pm:  (list_access_check)  Initialize the
	victim variable.
	(_a_default)  Supply a reason when "list" access causes
	a request to be denied.

	* lib/Mj/Format.pm:  (g_get)  File and directory substitutions
	only apply to the "get" command.

	* lib/Mj/List.pm:  (is_subscriber)  Add a definition test
	to avoid crashing.

2004-09-08  Michael Yount <csf@moscow.com>
