@@ -1,3 +1,8 @@
+2004-09-30  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Resend.pm:  (_r_strip_body)  Alter the headers
+	of a cleaned or formatted body part as little as possible.
+
 2004-09-29  Michael Yount <csf@moscow.com>
 
 	* bin/mj_enqueue, et al.:  Change the real uid and gid
